--- a/src/component/MainStyle.scss
+++ b/src/component/MainStyle.scss
@@ -1,6 +1,6 @@
 #Jump-to-context {
   //margin-left: 95%;
-  font-size: 4em;
+  font-size: 4rem;
   cursor: pointer;
   text-shadow: 0px 0px 7px lightblue;
 }
